大まかな配置を決定した

--- a/frontend/cropping.css
+++ b/frontend/cropping.css
@@ -1,3 +1,41 @@
 img {
     max-width: 100%;
   }
+
+.main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  width: 25%;
+  margin: 0 auto;
+}
+
+ul {
+  display: inline-block;
+}
+
+li {
+  list-style: none;
+  margin-top: 64px;
+}
+
+.right {
+  width: 75%;
+}
+
+.pray {
+  margin-top: 64px;
+  text-align: center;
+}
+
+@media screen and (max-width: 800px){
+  .left, .right {
+    width: 100%;
+  }
+
+  .main {
+    flex-direction: column;
+  }
+}
