スタート画面完成！

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
                 <img class="img" src="IMG_1446.JPG">
             </p>
             <p class="btn">
-                <a href="#" class="btn_start" style="font-size: 12px;">start</a>
+                <a href="cropping.html" class="btn_start" style="font-size: 12px;">start</a>
                     
             </p>
                 
