--- a/templates/cropping.html
+++ b/templates/cropping.html
@@ -4,6 +4,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/0.8.1/cropper.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<header>
+    <img src="../imgs/itami.png" class="title">
+</header>
 <div class="main">
     <div class="left">
         <ul>
@@ -24,7 +27,7 @@
         </ul>
     </div>
     <div class="right">
-        <img id="image">
+        <img id="image" class="edit">
     </div>
 </div>
 <div class="pray">
