--- a/templates/cropping.css
+++ b/templates/cropping.css
@@ -1,4 +1,16 @@
-img {
+header {
+  position: relative;
+  height: 65px;
+  width: 100%;
+  background: #FFE9B1;
+}
+
+.title {
+  height: 65px;
+  margin-left: 5%;
+}
+
+.edit {
     max-width: 100%;
   }
 
