料理を選択したときの条件分岐書いた

--- a/templates/cropping.html
+++ b/templates/cropping.html
@@ -20,7 +20,7 @@
             <li>
                 <p>さて、今夜私がいただくのは</p>
                 <select>
-                    <option>カツ丼</option>
+                    <option id="katsu">カツ丼</option>
                     <option>たこ焼き</option>
                 </select>
             </li>
