--- a/templates/cropping.html
+++ b/templates/cropping.html
@@ -19,9 +19,9 @@
             </li>
             <li>
                 <p>さて、今夜私がいただくのは</p>
-                <select>
-                    <option id="katsu">カツ丼</option>
-                    <option>たこ焼き</option>
+                <select id="menu">
+                    <option value="kastu">カツ丼</option>
+                    <option value="tako">たこ焼き</option>
                 </select>
             </li>
         </ul>
