デザインをちょっと変更

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,21 +5,17 @@
     <link rel="stylesheet" href="home.css">
     </head>
     <body>
-        <div class="header">
-        </div>
+        <header>
+            <img src="../imgs/itami.png" class="title">
+        </header>
 
         <div class="main">
-            <p style="font-size: 12px" class="one">悼たみます<p> 
-            <p style="font-size: 12px" class="two">〜いただきますを超えて逝け〜</p>
-            <p class="img_center">
+            <div class="img_center">
                 <img class="img" src="IMG_1446.JPG">
-            </p>
-            <p class="btn">
+            </div>
+            <div class="btn">
                 <a href="cropping.html" class="btn_start" style="font-size: 12px;">start</a>
-                    
-            </p>
-                
-
-        </div> 
+            </div>
+        </div>
     </body>
 </html>
