--- a/templates/pray.html
+++ b/templates/pray.html
@@ -4,25 +4,26 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <title>itatamimasu</title>
         <meta charset="utf-8">
-        
     </head>
 
     <body>
-        <div class="header">
+        <header>
+            <img src="../imgs/itami.png" class="title">
+        </header>
+        <div>
+            <input onclick="play()" type="button"></input>
         </div>
-       
         <div class="main">
-            <p style="font-size: 12px" class="contents">すべての食材を弔いましょう<p> 
-            <p class="img_center">
-                <img class="img" src="demo.gif">
-            </p>
+            <h3 class="contents">すべての食材を弔いましょう<p>
+            <div class="img_center">
+                <img class="img" src="../imgs/demo.gif">
+            </div>
             <p class="btn_center">
                 <a class="btn download" href="demo.gif"  style="font-size: 12px;">保存</a>
-                
                 <a href="#"class="btn twitter"style="font-size:12px;"><span class="fa fa-twitter"></span>Twitterで投稿</a>
-            </p>                   
+            </p>
+        </div>
 
-        </div> 
-    
+        <script src="pray.js"></script>
     </body>
 </html>
