--- a/templates/home.css
+++ b/templates/home.css
@@ -1,15 +1,25 @@
+header {
+    position: relative;
+    height: 65px;
+    width: 100%;
+    background: #FFE9B1;
+  }
+  
+  .title {
+    height: 65px;
+    margin-left: 5%;
+  }
+
 body {
-    width: 100%;  
-    height: 524px;
     margin: 0;
     font-family: "Inter";
   }
 
-a {text-decoration: none;
+a {
+    text-decoration: none;
     color:black;
 }
 .header {
-    position: relative;
     height: 65px;
     width: 100%;
     background: #FFE9B1;
@@ -18,44 +28,25 @@ a {text-decoration: none;
 
 .main {
     text-align: center;
-    position: absolute;
-    width: 100%;
-    height: 459px;
     color: black;
 
 }
-.one { 
-    margin-top: 72px;
-    font-style: normal;
-    font-weight: 900;
-}
-.two{
-    margin-top: 25px;
-    font-style: normal;
-    font-weight: 400;
 
-}
-.img_center{
-    margin-top: 0px;
-    margin-bottom: 0px;
-
+.img_center {
+    width: 60%;
+    max-width: 60%;
+    margin: 0 auto;
 }
 .img {
-    margin-top: 20px;
-    width: 215px;
-    height: 141px;
-
-}
-.btn {
-    margin-top: 27px;
+    width: 100%;
 }
 
 .btn_start{
-    padding: 7px 40px ;
+    padding: 16px 48px ;
     border-radius: 4px;
     display:inline-block;
     background-color:#C4C4C4;
-    font-weight: 400;
+    font-weight: 900;
 }
 
 .btn_start:hover {
